ingrid's updates and more

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,10 @@ h2, h5 {
 .list-group-item {
   color: var(--gray-color) 
 }
-
+.list-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
 .footer-link {
   color: var(--yellow-color);
   text-decoration: none;
@@ -74,7 +77,6 @@ h2, h5 {
 .footer-icon:hover {
   opacity: 0.8;
 }
-
 
 /*Home Page*/ 
 /* Bootstrap 4 text input with search icon on the right */
@@ -114,28 +116,7 @@ h2, h5 {
   text-decoration: underline;
   
 }
-/*breadcrumbs*/
-/*
-.breadcrumbs {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  font-size: 12px;
-  width: 100%;
-  padding: 10px;
-  gap: 5px;
-}
-ul.breadcrumbs {
-  width: 100%;
-  text-decoration: none;
-  color: #68D3FA;
-  gap: 10px;
-}
-li {
-    text-decoration: none;
-}*/ 
 
-/*End breadcrumbs*/
 /* Post Button */
 #mobile-post-btn {
     position: fixed;
@@ -169,12 +150,19 @@ li {
 #signup-tab.active, #signin-tab.active {
   color: var(--gray-color);
 }
-
+/*Housing   */ 
+.housing-card-max-width {
+  max-width: 350px
+}
 /*Swap page*/
-/*
-.nav-breadcrumbs {
-    display: none;
-}*/
+.h1Housing  {
+  color: var(--black-color);
+  text-align: center;
+}
+.housingSell li { 
+  font-size: 1.2em; 
+}
+
 
 @media screen and (max-width: 992px) {
   
